--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 /DumpHomework/MyCalculator.dmp
 /DumpHomework/MyCalculator.exe
 /DumpHomework/New folder/MyCalculator/.vs/MyCalculator/FileContentIndex
+/1/.vs/MyCalculatorv1
+/1/MyCalculatorv1/bin/Debug
+/1/MyCalculatorv1/obj/Debug
+/DumpHomework/New folder/MyCalculatorv1/bin/Debug
+/DumpHomework/New folder/MyCalculatorv1/obj/Debug
+/1
